refacturing and comments

--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,14 @@
           <h2>Welcome on TwitchApp</h2>
           <p>Hit the Log In button to enjoy your favorites streamers on the Twitch Platform</p>
         </div>
-        <div id="player" class="embed-responsive embed-responsive-16by9 col-md-10 col-md-offset-1">
+        <div id="player" class="embed-responsive embed-responsive-16by9 col-md-8 col-md-offset-2">
           <twitchplayer name="actualStream"></twitchplayer>
         </div>        
+      </div>
+      <div class="row">
+        <footer class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
+          <p>Made with the Twitch.tv API available at this <a href="https://dev.twitch.tv/" target="_blank">address</a></p>
+      </footer>
       </div>
     </div>
     <script src="bower_components/jquery/dist/jquery.js"></script>
