--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Twitch App</title>
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width">  
+  <!-- build:css(app/..) styles/vendor.css -->
   <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
+  <!-- endbuild -->
+  <!-- build:css styles/main.css -->
   <link href="styles/index.css" rel="stylesheet" type="text/css">
   <link href="styles/thumbnail.css" rel="stylesheet" type="text/css">
+  <!-- endbuild -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <base href="/">
 </head>
@@ -40,8 +44,8 @@
       </footer>
       </div>
     </div>
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <!-- build:js(app/..) scripts/vendor.js -->
+    <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -49,6 +53,9 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:js scripts/script.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/mainController.js"></script>
     <script src="scripts/services/auth.js"></script>
@@ -57,5 +64,6 @@
     <script src="scripts/directives/thumbnail.js"></script>
     <script src="scripts/directives/twitchplayer.js"></script>
     <script src="scripts/filters/twitchEmbedUrl.js"></script>
+    <!-- endbuild -->
   </body>
 </html>
